--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -6,7 +6,199 @@ CSS to be applied ONLY on the snapshot page
 @import reusable
 
 #ring-page
-  
+
+  .monospace
+    monospace()
+    font-size : 13px
+
+  #current-area
+    max-width   : 850px
+    margin      : 0 auto 45px auto
+    padding-top : 40px
+ 
+    & > span.gui-text-flat
+      line-height : 1.5
+      display     : block
+
+  .field-container
+    width          : 90%
+    vertical-align : middle
+
+    .gui-field
+      margin-right : 0
+
+  .gui-light
+    vertical-align : middle
+    padding        : 14px 0 9px 20px
+
+  .ring-light
+    dimensions(32px, 35px)
+    background     : url('/admin/ui/images/ring-indicator.png') no-repeat transparent
+    vertical-align : middle
+    margin-right   : 5px
+
+    &.green
+      background-position : center top
+
+    &.red
+      background-position : center bottom
+
+  #summary-info
+    margin : 20px 0 0
+
+    h4
+      margin-bottom : 30px
+
+    > div
+      float         : left
+      margin-bottom : 30px
+      padding       : 5px 18px
+      border-right  : 1px solid lightWhite
+
+      &.clear
+        float : none
+        clear : both
+
+    .item-1
+      width : 47%
+      padding-left : 0
+
+    .item-2
+      width : 22%
+      .field-container
+        width : 75%
+    
+    .item-3
+      width         : 22%
+      padding-right : 0
+      border-right  : none
+      .field-container
+        width : 75%
+
+    .clear
+      border-right : none
+      padding      : 0 0 0 0
+
+
+  #details-info
+    
+    label
+      font-weight : normal
+      color       : mediumGray
+      text-shadow : none
+
+    > h4, > div
+      display        : inline-block
+      vertical-align : middle 
+      padding-bottom : 0
+      margin         : 20px 0 30px
+
+    > h4
+      padding-right : 30px
+
+    > div
+      padding-right : 30px
+
+      &.first
+        border-right : 1px solid lightWhite
+
+      &.last
+        margin-left : 15px
+
+
+  #display-container
+    corners()
+    vendor('box-shadow', inset 0 1px 3px darkened)
+    width         : 92%
+    background    : darkened
+    margin-bottom : 15px
+    border-bottom : 1px solid lightWhite
+    padding       : 18px 22px
+    margin-right  : 33px
+    position      : relative
+    max-height    : 372px
+
+    #nodes, #handoffs
+      ul 
+        margin-bottom : 10px
+
+        li
+          display     : inline-block
+          padding-top : 8px
+
+    #nodes
+      .item-1
+        width : 33%
+      .item-2
+        width : 15%
+    
+    #handoffs
+      .item-1
+        width : 25%
+      .item-2
+        width : 28%
+        span.monospace
+          padding-top : 5px
+      .item-3
+        width : 22%
+      .item-4
+        width : 25%
+
+    .node, .partition
+      margin-bottom : 5px
+
+      .gui-light
+        padding-top  : 10px
+        margin-right : 8px
+
+      div, span
+        display        : inline-block
+        vertical-align : middle
+
+      .orange-arrow
+        dimensions(29px, 26px)
+        background   : url('/admin/ui/images/orange-arrow.png') no-repeat transparent
+        float        : right
+        margin-right : 15px
+
+
+  @media screen and (max-width: 900px)
+    #summary-info
+      .item-1
+        width         : 33%
+        padding-right : 0
+        .field-container
+          width : 75%
+
+  @media screen and (max-width: 750px)
+    #summary-info
+      .item-2
+        width : 28%
+      .item-3
+        .gui-light
+          display : none
+
+  @media screen and (max-width: 600px)
+    .ring-light
+      display : none
+    #summary-info  
+      .item-1
+        width         : 50%
+        padding-right : 10px
+      .item-2
+        width         : 22%
+        border-right  : none
+        padding-right : 0
+      .item-3
+        display : none
+
+  @media screen and (max-width: 450px)
+    #summary-info
+      .item-2
+        width : 22%
+
+
+
   #ring-filter
     text-align   : left
     padding-left : 25px
