Add new ring availability page.

--- a/priv/admin/css/general.styl
+++ b/priv/admin/css/general.styl
@@ -455,6 +455,7 @@ input.gui-point-button:active, input.gui-rect-button:active, input.gui-point-but
   padding       : 10px
   border-bottom : 1px solid lightWhite
   margin-right  : 2em
+  font-size     : 13px;
 
 .gui-input
   @extend .gui-field
@@ -527,6 +528,7 @@ input.gui-point-button:active, input.gui-rect-button:active, input.gui-point-but
 
 .inline-block
   display : inline-block
+
 
 
 /* RESPONSIVE MEDIA QUERIES */
