--- a/priv/admin/css/reusable.styl
+++ b/priv/admin/css/reusable.styl
@@ -18,6 +18,8 @@ riakred     = #f05f5f
 vendor(prop, args)
   -webkit-{prop} : args
   -moz-{prop}    : args
+  -ms-{prop}     : args
+  -o-{prop}      : args
   {prop}         : args
   
 gradient(lightcolor, darkcolor)
@@ -29,10 +31,18 @@ gradient(lightcolor, darkcolor)
   background : -ms-linear-gradient(     top,                   lightcolor 0%, darkcolor 100%)
   background : linear-gradient(         top bottom,            lightcolor 0%, darkcolor 100%)
 
+radialGradient(lightcolor, darkcolor)
+  background-image : -moz-radial-gradient(    center, lightcolor 0%, darkcolor 100%)
+  background-image : -webkit-gradient(radial, center, color-stop(0%, lightcolor), color-stop(100%, darkcolor))
+  background-image : -webkit-radial-gradient( center, lightcolor 0%, darkcolor 100%)
+  background-image : -o-radial-gradient(      center, lightcolor 0%, darkcolor 100%)
+  background-image : -ms-radial-gradient(     center, lightcolor 0%, darkcolor 100%)
+  background-image : radial-gradient(         center, lightcolor 0%, darkcolor 100%)
+
 corners(curve = 4px)
   vendor('border-radius', curve)
   
-singleCorner(vert, horiz, args)
+singleCorner(vert, horiz, args = 4px)
   -webkit-border-{vert}-{horiz}-radius : args
   -moz-border-radius-{vert}{horiz}     : args
   border-{vert}-{horiz}-radius         : args
@@ -93,19 +103,18 @@ headline-bold()
   font-weight : bold
 
 // Applies a css transition
-css-transition(args) {
+css-transition(args)
   -webkit-transition : args
   -moz-transition    : args
   -ms-transition     : args
   transition         : args
-}
 
 // Applies a css transform
-css-transform(args) {
+css-transform(args)
   -webkit-transform : rotate(args)
   -moz-transform    : rotate(args)
   -o-transform      : rotate(args)
   transform         : rotate(args)
-}
+
 
 /* End Functions */
