--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -1,76 +1,99 @@
-
 <div id="ring-page">
 
   <section id="title-container">
     <div class="side-line"></div>
     <div class="title-box">
       <span class="vert-border-left"></span>
-      <h1 id="ring-headline" class="gui-headline-bold page-title">Current Ring</h1>
+      <h1 id="ring-headline" class="gui-headline-bold page-title">Ring Status</h1>
       <span class="vert-border-right"></span>
     </div>
-    <div class="side-line">
-      {{outlet partitionFilter}}
-    </div>
+    <div class="side-line"></div>
     <div class="clear"></div>
   </section>
 
-  <ul class="pagination first gui-text">
-    <li name="prev"><span class="paginator" {{action prevPage href=true target="controller"}}>Prev</span></li>
-    {{#each pages}}
-      {{view RiakControl.PaginationItemView contentBinding="this"}}
-    {{/each}}
-    <li name="next"><span class="paginator" {{action nextPage href=true target="controller"}}>Next</span></li>
-  </ul>
-  <div class="cut"></div>
-  <div id="partition-list">
-      <table class="list-table" id="ring-table">
-          <thead>
-              <tr class="table-head has-cut">
-                  <th><h3>#</h3></th>
-                  <th><h3>Owner Node</h3></th>
-                  <th><h3>KV</h3></th>
-                  <th><h3>Pipe</h3></th>
-                  <th><h3>Search</h3></th>
-              </tr>
-          </thead>
-          {{#collection RiakControl.PartitionView contentBinding="controller.paginatedContent"}}
-            {{#with view.content}}
-            <td class="partition-number gui-text">{{i}}</td>
-            <td class="owner-box gui-text">
-                <div class="owner gui-field">{{node}}</div>
-                <div class="partition-index hide">{{index}}</div>
-            </td>
-            {{/with}}
-            {{#with view}}
-            <td class="kv-box gui-text">
-                <a {{bindAttr class="kvIndicator lightClasses"}}>
-                    <span class="kv-status">{{kvStatus}}</span>
-                    <span class="hide fallback-to"></span>
-                </a>
-            </td>
-            <td class="pipe-box gui-text">
-                <a {{bindAttr class="pipeIndicator lightClasses"}}>
-                    <span class="pipe-status">{{pipeStatus}}</span>
-                    <span class="hide fallback-to"></span>
-                </a>
-            </td>
-            <td class="search-box gui-text">
-                <a {{bindAttr class="searchIndicator lightClasses"}}>
-                    <span class="search-status">{{searchStatus}}</span>
-                    <span class="hide fallback-to"></span>
-                </a>
-            </td>
-            {{/with}}
-          {{/collection}}
-      </table>
+  <div id="current-ring">
+
+    <div class="chart-wrapper">
+      <h2 class="gui-headline">Availability</h2>
+
+      {{view RiakControl.DegeneratePreflistChart}}
+      <div class="chart-spacer"></div>
+
+      {{view RiakControl.QuorumUnavailableChart}}
+      <div class="chart-spacer"></div>
+
+      {{view RiakControl.AllUnavailableChart}}
+
+      <div class="clear"></div>
+    </div>
+
+    <div class="partition-wrapper">
+      <h2 class="gui-headline partition-section">Partitions</h2>
+
+      <section id="partition-container">
+        <h4 class="gui-headline-bold partition-header">Partitions</h4>
+        {{collection RiakControl.PartitionsView contentBinding="content"}}
+        <div class="clear"></div>
+      </section>
+
+      <section id="legend">
+        <div id="contextual-info">
+          <h4 class="gui-headline-bold">Partition Information</h4>
+          <div class="contextual-container">
+            {{#if partitionSelected}}
+
+              <div class="info-section">
+                <h4 class="gui-headline-bold">Index</h4>
+                <span class="monospace">
+                  {{selectedPartition.index}}
+                </span>
+              </div>
+
+              {{#if selectedPartition.unavailable}}
+                <div class="info-section">
+                  <h4 class="gui-headline-bold">Unavailable Primaries</h4>
+                  <ul>
+                    {{#each selectedPartition.unavailable_nodes}}
+                    <li>{{this}}</li>
+                    {{/each}}
+                  </ul>
+                </div>
+              {{/if}}
+
+              <div class="info-section">
+                {{#if selectedPartition.all_nodes.length}}
+                  <h4 class="gui-headline-bold">All Primaries</h4>
+                  <ul>
+                    {{#each selectedPartition.all_nodes}}
+                    <li>{{this}}</li>
+                    {{/each}}
+                  </ul>
+                {{else}}
+                  <h4 class="gui-headline-bold">No Primaries To Display</h4>
+                {{/if}}
+              </div>
+
+            {{else}}
+            <span class="gui-text italic hover-message">
+              Click on a partition square to view its more information.
+            </span>
+            {{/if}}
+          </div>
+        </div>
+
+        <h4 class="gui-headline-bold">Legend</h4>
+        <div class="partition red"></div>
+        <span class="legend-label gui-text">Only fallbacks available.</span><br/>
+        <div class="partition orange"></div>
+        <span class="legend-label gui-text">Majority of primary replicas down.</span><br/>
+        <div class="partition blue"></div>
+        <span class="legend-label gui-text">Replicas do not live on unique nodes.</span><br/>
+        <div class="partition green"></div>
+        <span class="legend-label gui-text">Available.</span><br/>
+      </section>
+
+      <div class="clear"></div>
+    </div>
   </div>
-  <div class="cut"></div>
-  <ul class="pagination gui-text">
-    <li name="prev"><span class="paginator" {{action prevPage href=true target="controller"}}>Prev</span></li>
-    {{#each pages}}
-      {{view RiakControl.PaginationItemView contentBinding="this"}}
-    {{/each}}
-    <li name="next"><span class="paginator" {{action nextPage href=true target="controller"}}>Next</span></li>
-  </ul>
-  
+  <div class="clear"></div>
 </div>
