--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -7,6 +7,10 @@ CSS to be applied ONLY on the snapshot page
 
 #ring-page
 
+  #no-details
+    text-align : center
+    margin     : 25px auto
+
   .monospace
     monospace()
     font-size : 13px
