--- a/priv/admin/js/templates/ring_details.hbs
+++ b/priv/admin/js/templates/ring_details.hbs
@@ -1,1 +1,1 @@
-<div id="ringDetails">No details currently available.</div>
+<h4 class="gui-headline-bold" id="no-details">No details currently available.</h4>
