--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -22,7 +22,7 @@
     <section id="summary-info">
       <div class="item-1">
         <h4 class="gui-headline-bold">Claimant Name &amp; Status</h4>
-        <div class="gui-light status-light inline-block green">
+        <div {{bindAttr class="claimantIndicatorLight"}}>
         </div><div class="gui-text field-container inline-block">
           <div class="name gui-field">{{ claimant }}</div>
         </div>
@@ -30,7 +30,7 @@
 
       <div class="item-2">
         <h4 class="gui-headline-bold">Ring Ready</h4>
-        <div class="ring-light inline-block green">
+        <div {{bindAttr class="ringReadyIndicatorLight"}}>
         </div><div class="gui-text field-container inline-block">
           <div class="name gui-field">{{ ringReady }}</div>
         </div>
@@ -38,7 +38,7 @@
 
       <div class="item-3">
         <h4 class="gui-headline-bold">Current Handoffs</h4>
-        <div class="gui-light status-light inline-block orange">
+        <div {{bindAttr class="currentHandoffsIndicatorLight"}}>
         </div><div class="gui-text field-container inline-block">
           <div class="name gui-field">{{ currentHandoffs }}</div>
         </div>
