Wire up unreachable nodes.

--- a/priv/admin/js/templates/unreachable_nodes.hbs
+++ b/priv/admin/js/templates/unreachable_nodes.hbs
@@ -4,5 +4,5 @@
     <li class="item-2"><h4 class="gui-headline-bold">Status</h4></li>
   </ul>
 
-  {{collection RiakControl.UnreachableNodesCollectionView contentBinding="controller"}}
+  {{collection RiakControl.UnreachableNodesCollectionView contentBinding="controller.filteredContent"}}
 </div>
