Get unreachable nodes working.

--- a/priv/admin/js/templates/bad_node.hbs
+++ b/priv/admin/js/templates/bad_node.hbs
@@ -1,3 +1,4 @@
+{{#with view}}
 <div class="node">
   <div class="item-1">
     <div {{bindAttr class="view.indicatorLights"}}></div>
@@ -5,3 +6,4 @@
   </div>
   <span class="item-2 monospace">{{ status }}</span>
 </div>
+{{/with}}
