Monospace has no overflow.

--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -14,6 +14,8 @@ CSS to be applied ONLY on the snapshot page
   .monospace
     monospace()
     font-size : 13px
+    text-overflow : ellipsis
+    overflow : hidden
 
   #current-area
     max-width   : 850px
