--- a/priv/admin/js/templates/handoff.hbs
+++ b/priv/admin/js/templates/handoff.hbs
@@ -1,14 +1,14 @@
-{{#each}}
+{{#with view}}
   <div class="partition">
     <span class="item-1 monospace">
-      {{ partitionId }}
+      {{index}}
     </span><div class="item-2">
-      <span class="monospace">{{ currentOwner }}</span>
+      <span class="monospace">{{owner}}</span>
       <span class="orange-arrow"></span>
     </div><span class="item-3 monospace">
-      {{ nextOwner }}
+      {{next_owner}}
     </span><span class="item-4 monospace">
-      {{ waitingFor }}
+      {{waiting_for}}
     </span>
-  </div>
-{{/each}}
+    </div>
+{{/with}}
