--- a/priv/admin/js/templates/handoff.hbs
+++ b/priv/admin/js/templates/handoff.hbs
@@ -8,7 +8,7 @@
     </div><span class="item-3 monospace">
       {{next_owner}}
     </span><span class="item-4 monospace">
-      {{waiting_for}}
+      {{waiting_forReadable}}
     </span>
     </div>
 {{/with}}
