--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -11,7 +11,5 @@
     <div class="clear"></div>
   </section>
 
-  <div id="current-area">
-    <h2 class="gui-headline">Summary<br/></h2>
-  </div>
+  {{collection RiakControl.PartitionsView contentBinding="content"}}
 </div>
