--- a/priv/admin/js/templates/partition.hbs
+++ b/priv/admin/js/templates/partition.hbs
@@ -1,1 +1,9 @@
-{{view.content}}
+{{#with view}}
+  <div>
+    {{content}}
+    {{n_val}}
+    {{available}}
+    {{quorum}}
+    {{index}}
+  </div>
+{{/with}}
